--- a/css/main.css
+++ b/css/main.css
@@ -668,7 +668,8 @@ margin: 0;
   flex-direction: column;
   justify-content: stretch;
   align-items: start;
-  background: #eee;
+  background: #fff;
+  border: 1px solid #EFEFEF;
   border-radius: 20px;
 }
 #home .content-area .layout-box {
@@ -706,7 +707,7 @@ margin: 0;
   border: 2px solid transparent;
 }
 #home .content-area .b-show {
-  border-color: #5228F4 !important;
+  border-color: #C5B6FF !important;
 }
 #home .content-area .recent-wrap .templaete-img {
   width: 230px;
@@ -790,13 +791,12 @@ margin: 0;
   aspect-ratio: 9 / 16;
 }
 /* // 비율에 맞게 이미지가 변경되는 값 */
-#home .content-area .mockup-content .mock-subTitle {
+#home .content-area .mock-subTitle {
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 4px;
-  bottom: 15%;
   transform: translateX(-50%);
   z-index: 2;
 }
@@ -888,8 +888,9 @@ margin: 0;
 }
 #home .content-area .subtitle-edit-title {
   flex: 0 0 70px;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
+  color: #333;
 }
 #home .content-area .subtitle-effect-wrap {
   display: flex;
@@ -902,12 +903,13 @@ margin: 0;
 #home .content-area .effectBtn {
   width: 150px;
   height: 80px;
-  background: #fafafa;
-  border: 2px solid transparent;
+  background: transparent;
+  border: 2px solid #eee;
 }
 #home .content-area .effectBtn-text {
   display: block;
   margin-top: 10px;
+  font-size: 15px;
 }
 #home .content-area .edit-item-wrap .flex {
   align-items: center;
@@ -920,7 +922,8 @@ margin: 0;
   padding: 20px 30px;
   border-bottom-right-radius: 20px;
   border-bottom-left-radius: 20px;
-  background: #ddd;
+  border-top: 3px solid #eee;
+  background: #fff;
 }
 #home .content-area .font-edit-wrap {
   flex: 1;
@@ -969,6 +972,7 @@ margin: 0;
   font-size: 16px;
   font-weight: 500;
   background: #fff;
+  border: 1px solid #eee;
   border-radius: 5px;
   cursor: pointer;
 }
@@ -979,10 +983,12 @@ margin: 0;
   width: 100%;
   max-width: 350px;
   overflow: hidden;
+  padding: 4px;
   position: absolute;
   top: 38px;
   left: 0;
-  background: #ccc;
+  background: #fff;
+  border: 1px solid #eee;
   border-radius: 5px;
   z-index: 20;
   transition: all 0.3s ease-in-out;
@@ -997,12 +1003,12 @@ margin: 0;
   line-height: 30px;
   margin-bottom: 4px;
   font-size: 15px;
-  background: #ddd;
+  background: #fafafa;
+  border-radius: 3px;
   cursor: pointer;
 }
 #home .content-area .option:hover {
-  background: #333;
-  color: #fff;
+  background: #C5B6FF;
 }
 #home .content-area .number-container {
   flex: 0 0 200px;
@@ -1012,9 +1018,10 @@ margin: 0;
 }
 #home .content-area  .number-input {
   font-size: 16px;
-  padding: 8px;
+  padding: 7px 8px;
   border: none;
-  border-radius: 3px;
+  border-radius: 5px;
+  border: 1px solid #eee;
 }
 #home .content-area  .number-input:focus {
   outline: 1px solid #C5B6FF;
@@ -1025,16 +1032,14 @@ margin: 0;
   box-sizing: border-box;
   line-height: 18px;
   cursor: pointer;
-  border: none;
-  border-left: 1px solid #ddd;
-  border-top: 1px solid #ddd;
+  border: 1px solid #ddd;
   border-radius: 0px;
   position: absolute;
   right: 0;
 }
 #home .content-area .upBtn {
   top: 0;
-  border-top: none;
+  border-bottom: none;
   border-top-right-radius: 3px;
 }
 #home .content-area .downBtn {
@@ -1112,9 +1117,6 @@ margin: 0;
 #home .subtitle-container .word-wrap {
   line-height: 160%;
 }
-#home .subtitle-container .color-chip {
-  
-}
 #home .subtitle-container .word {
   cursor: pointer;
   margin-right: 2px;
@@ -1134,6 +1136,7 @@ margin: 0;
 }
 #home .content-area .selected {
   cursor: text;
+  background: #f2eeff;
 }
 #home .mockup-content .user-title {
   color: #fafafa;
@@ -1142,7 +1145,17 @@ margin: 0;
   line-height: 160%;
   text-align: center;
 }
-/* !! 설정값에 따라 적용되는 클래스명 */
+/* !!!!!! 설정값에 따라 적용되는 클래스명 */
+#home .content-area .top-subTitle { /* 중단 위치 시 */
+  bottom: auto;
+  top: 15%;
+}
+#home .content-area .middle-subTitle { /* 중단 위치 시 */
+  bottom: 50%;
+}
+#home .content-area .bottom-subTitle { /* 중단 위치 시 */
+  bottom: 15%;
+}
 #home .mockup-content .font-color { /* 선택한 폰트 컬러 적용 */
   color: #ffe100;
 }
@@ -1159,6 +1172,7 @@ margin: 0;
   font-size: 22px;
   color: #2fff00;
 }
+/*  */
 #home .reprodct-area {
   background: #FEFEFE;
   border-top: 1px solid;
