--- a/css/main.css
+++ b/css/main.css
@@ -1457,7 +1457,7 @@ ol {
   text-align: center;
   position: absolute;
   top: 24px;
-  right: 24px;
+  right: 7%;
 }
 
 #home .watermark-deleteBtn {
