--- a/css/main.css
+++ b/css/main.css
@@ -1503,6 +1503,10 @@ ol {
   z-index: 30;
 }
 
+#home .watermark-img .watermark-viral{
+  width: 70%;
+}
+
 #home .watermark-d-container {
   width: fit-content;
   text-align: center;
@@ -2301,7 +2305,32 @@ ol {
   align-items: center;
   margin: 50px 0;
 }
+/* 커스텀 재생/정지 버튼 */
+#home .content-area .projectV-preview .video-container {
+  position: relative;
+} 
+#home .content-area .projectV-preview .video-play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 52px;
+  height: 45px;
+  background: #292929;
+  border-radius: 10%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  opacity: 0; /* 기본적으로 숨김 */
+  transition: opacity 0.3s ease-in-out;
+}
 
+#home .content-area .projectV-preview .video-container:hover .video-play-btn {
+  opacity: 1;
+}
+
+/* 여기까지 커스텀 재생/정지 버튼 */
 #home .content-area .projectV-preview .btn-icon-box {
   display: flex;
   flex-direction: column;
