--- a/css/main.css
+++ b/css/main.css
@@ -2392,6 +2392,17 @@ ol {
 
 
 /* ----- 나래님 작업 소스 projectV-complete : 생성한 영상 ----- */
+/* Safari에서 aspect-ratio가 적용되지 않는 경우 */
+@supports not (aspect-ratio: 16 / 9) {
+  .thumb-slide-box {
+      position: relative;
+      width: 30%;
+      height: 0;
+      padding-top: 56.25%; /* 16:9 비율 유지 */
+  }
+}
+
+
 /* 썸네일 슬라이드바 */
 #home .content-area .thumb-slide-contain {
   display: flex;
@@ -2403,10 +2414,19 @@ ol {
   /* 드래그 커서 */
 }
 
+#home  .thumb-slide-box > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
 #home .content-area .thumb-slide-box {
   flex: 0 0 auto;
   max-width: 380px;
   width: 30%;
+  height: auto;
   margin-right: 20px;
   max-height: 180px;
   /* height: auto; */
