--- a/css/main.css
+++ b/css/main.css
@@ -52,6 +52,26 @@ ol {
   display: block;
 }
 
+#home video {
+  /* 비디오 스타일 초기화 */
+  all: unset; /* 모든 기본 스타일 초기화 */
+  
+  /* 필요하면 추가 설정 */
+  display: block;
+  width: 100%;
+  height: auto;
+  object-fit: cover; /* 비디오가 꽉 차도록 설정 */
+
+  /* iOS의 자동 확대 & 컨트롤 버튼 비활성화 */
+  -webkit-user-select: none; /* 텍스트 선택 방지 */
+  -webkit-touch-callout: none; /* 길게 눌렀을 때 메뉴 비활성화 */
+  -webkit-tap-highlight-color: transparent; /* 탭할 때 하이라이트 효과 제거 */
+  
+  /* iOS에서 영상 확대 방지 */
+  max-width: 100%;
+  height: auto;
+}
+
 #home input {
   background: #fefefe;
   border-radius: 10px;
@@ -1710,9 +1730,9 @@ ol {
   color: #868686;
 }
 
-/* 변환구간 */
 #home .pannel-box {
   width: 100%;
+  margin-top: 30px;
   background: #fff;
   padding: 16px;
   border-radius: 12px;
@@ -1724,7 +1744,16 @@ ol {
   font-size: 14px;
   font-weight: 600;
   color: #5a48ff;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  position: relative;
+}
+
+#home .pannel-delete {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
 }
 
 #home .pannel-time {
@@ -1786,6 +1815,31 @@ ol {
   border-radius: 50%;
   cursor: pointer;
   pointer-events: auto;
+}
+
+#home .addBtn-container {
+  text-align: center;
+  margin-top: 40px;
+}
+
+#home .addBtn {
+  padding: 10px;
+  margin: 0 auto;
+  align-items: center;
+  gap: 4px;
+  background: transparent;
+  color: #5228F4;
+}
+
+#home .making2-inner .past-wrap {
+  width: 100%;
+  max-width: none;
+  padding: 0;
+  background: lightcoral;
+}
+
+#home .making2-inner .template-wrap .title {
+  background: lightblue;
 }
 
 @media (max-width: 1538px) {
