--- a/css/main.css
+++ b/css/main.css
@@ -2503,15 +2503,15 @@ ol {
 
 #home .content-area .thumb-slide-box {
   flex: 0 0 auto;
-  max-width: 380px;
+  max-width: 360px;
   width: 30%;
   margin-right: 20px;
   max-height: 180px;
-  /* height: auto; */
-  aspect-ratio: 16 / 9;
+  height: auto;
+  /* aspect-ratio: 16 / 9; */
   background-color: #FEFEFE;
   display: flex;
-  align-items: center;
+  align-items: stretch;
   justify-content: center;
   font-size: 14px;
   border-radius: 20px;
@@ -2530,6 +2530,7 @@ ol {
   overflow: hidden;
   width: 100%;
   /* height: 100%; */
+  display: flex;
 }
 
 #home .content-area .thumb-slide-box .thumbnail {
@@ -2803,6 +2804,9 @@ ol {
 }
 
 @media (max-width: 850px) {
+  #home .content-area .thumb-slide-box {
+    flex-wrap: wrap;
+  }
   #home .semibold-style {
     font-size: 14px;
   }
@@ -2820,17 +2824,13 @@ ol {
   }
 
   #home .thumb-slide-contain .projectV-info .star-ranking .star-img {
-    width: 50%;
+    width: 30%;
   }
 }
 
 @media (max-width: 767px) {
-  #home .content-area .thumb-slide-box {
-    flex-wrap: wrap;
-  }
-
   #home .thumb-slide-contain .projectV-info .star-ranking .star-img {
-    width: 30%;
+    /* width: 30%; */
   }
 }
 
