--- a/css/main.css
+++ b/css/main.css
@@ -1891,7 +1891,7 @@ ol {
   text-align: center;
   padding: 10px 0;
   background: #fff;
-  border-radius: 2vw;
+  border-radius: 1em;
 }
 
 #home .making2-inner .past-wrap .templaete-img {
